CSS Changes: - fixed issue where filters were overlapped by promoted listing indicator - added promoted listing indicator to map view - added marker images from Google should we ever need to host them locally

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -694,7 +694,7 @@ header .user_actions .list_property {
     position: absolute;
     top: 0px;
     width: 129px;
-    z-index: 9999; }
+    z-index: 9990; }
 
 .promoted-small {
     width: 100px;
